--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,9 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
+  <build_depend>message_generation</build_depend> 
+  <build_export_depend>message_generation</build_export_depend> 
+
   <build_depend>actionlib</build_depend> 
   <build_depend>actionlib_msgs</build_depend> 
 
