before adding robots

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         "/home/piotr/catkin_ws/devel/lib/python2.7/dist-packages",
         "/home/piotr/Catkin_ws_isolated/install_isolated/lib/python2.7/dist-packages",
         "/opt/ros/melodic/lib/python2.7/dist-packages"
-    ]
+    ],
+    "editor.detectIndentation": false
 }
