--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
   FILES
   MyPose.srv
+  InitRobot.srv
 )
 
 ## Generate actions in the 'action' folder
