--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ add_service_files(
 ## Generate actions in the 'action' folder
 add_action_files(
   FILES
-  InitRobot.action
+  Apf.action
  )
 
 # Generate added messages and services with any dependencies listed here
